@@ -1,52 +1,77 @@
 package whelk.xlql;
 
+import whelk.exception.InvalidQueryException;
+
 import java.util.ArrayList;
 import java.util.List;
 
 public class Ast {
-    public record And (List<Object> operands) {}
-    public record Or (List<Object> operands) {}
-    public record Not (Object operand) {}
-    public record Like (Object operand) {}
-    public record CodeEquals (String code, Object operand) {}
-    public record CodeLesserGreaterThan (String code, String operator, String operand) {}
+    public sealed interface Node permits And, Or, Not, CodeEquals, CodeLesserGreaterThan, CodeEqualsLeaf, Leaf {
+    }
 
-    public static Object buildFrom(Parse.OrComb orComb) throws BadQueryException {
-        Object ast = reduce(orComb);
+    public record And(List<Node> operands) implements Node {
+    }
+
+    public record Or(List<Node> operands) implements Node {
+    }
+
+    public record Not(Node operand) implements Node {
+    }
+
+    //    public record Like (Node operand) implements Node {}
+    public record CodeEquals(String code, Node operand) implements Node {
+    }
+
+    public record CodeEqualsLeaf(String code, Leaf operand) implements Node {
+    }
+
+    public record CodeLesserGreaterThan(String code, String operator, Leaf operand) implements Node {
+    }
+
+    public record Leaf(String value) implements Node {
+    }
+
+    Node tree;
+
+    public Ast(Parse.OrComb orComb) throws InvalidQueryException {
+        this.tree = buildFrom(orComb);
+    }
+
+    public static Node buildFrom(Parse.OrComb orComb) throws InvalidQueryException {
+        Node ast = reduce(orComb);
         Analysis.checkSemantics(ast);
         return ast;
     }
 
-    private static Object reduce(Parse.OrComb orComb) {
+    private static Node reduce(Parse.OrComb orComb) throws InvalidQueryException {
         // public record OrComb(List<AndComb> andCombs) {}
 
         if (orComb.andCombs().size() > 1) {
-            List<Object> result = new ArrayList<>();
+            List<Node> result = new ArrayList<>();
             for (Parse.AndComb andComb : orComb.andCombs()) {
                 result.add(reduce(andComb));
             }
             return new Or(result);
-        }
-        else {
-            return reduce(orComb.andCombs().get(0));
+        } else {
+            return reduce(orComb.andCombs().getFirst());
         }
     }
 
-    private static Object reduce(Parse.AndComb andComb) {
+    private static Node reduce(Parse.AndComb andComb) throws InvalidQueryException {
         // public record AndComb(List<Term> ts) {}
 
         if (andComb.ts().size() > 1) {
-            List<Object> result = new ArrayList<>();
+            List<Node> result = new ArrayList<>();
             for (Parse.Term t : andComb.ts()) {
                 result.add(reduce(t));
             }
             return new And(result);
         } else {
-            return reduce(andComb.ts().get(0));
+            return reduce(andComb.ts().getFirst());
         }
     }
 
-    private static Object reduce (Parse.Term term) {
+    private static Node reduce(Parse.Term term) throws InvalidQueryException {
         // public record Term (String string1, Uoperator uop, Term term, Group group, Boperator bop, BoperatorEq bopeq, String string2) {}
 
         // Ordinary string term
@@ -57,7 +82,7 @@ public class Ast {
                 term.bop() == null &&
                 term.bopeq() == null &&
                 term.string2() == null) {
-            return term.string1();
+            return new Leaf(term.string1());
         }
 
         // Group term
@@ -80,10 +105,11 @@ public class Ast {
                 term.bopeq() == null &&
                 term.string2() == null) {
 
-            if ( term.uop().s().equals("!") || term.uop().s().equals("not")) {
+            if (term.uop().s().equals("!") || term.uop().s().equals("not")) {
                 return new Not(reduce(term.term()));
-            } else if ( term.uop().s().equals("~") ) {
-                return new Like(reduce(term.term()));
+            } else if (term.uop().s().equals("~")) {
+                throw new InvalidQueryException("Like operator (~) not yet supported");
+//                return new Like(reduce(term.term()));
             }
         }
 
@@ -106,13 +132,13 @@ public class Ast {
                 term.bop() != null &&
                 term.bopeq() == null &&
                 term.string2() != null) {
-            return new CodeLesserGreaterThan(term.string2(), term.bop().op(), term.string1());
+            return new CodeLesserGreaterThan(term.string2(), term.bop().op(), new Leaf(term.string1()));
         }
 
         throw new RuntimeException("XLQL Error when reducing: " + term); // Should not be reachable. This is a bug.
     }
 
-    private static Object reduce(Parse.Group group) {
+    private static Node reduce(Parse.Group group) throws InvalidQueryException {
         // public record Group(OrComb o, AndComb a, Group g) {}
         if (group.g() != null) {
             return reduce(group.g());
@@ -124,5 +150,4 @@ public class Ast {
 
         throw new RuntimeException("XLQL Error when reducing: " + group); // Should not be reachable. This is a bug.
     }
-
 }
